Blender 2.91 crash when you select Grid Display > 'Obstacle Levelset' or 'Outflow Levelset' in Fluid Simulation #80943

Closed
opened 2020-09-18 19:19:19 +02:00 by Óscar · 6 comments

System Information
Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon HD 6970M OpenGL Engine ATI Technologies Inc. 4.1 ATI-1.68.25

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-17 21:51, hash: cacd57b67a
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes when Physics Properties > Fluid > Viewport Display > Grid Display > Field is set to Obstacle Levelset or Outflow Levelset without an obstacle or outflow object in the scene.

Exact steps for others to reproduce the error

  • Open the default file
  • Select the cube and use Object > Quick Effects > Quick Liquid
  • In Physics Properties > Fluid > Viewport Display, tick the checkbox for Grid Display and set Field to Obstacle Levelset or Outflow Levelset.
  • Blender crashes

Keep in mind that there aren't obstacles or outflow objects in the scene.

**System Information** Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon HD 6970M OpenGL Engine ATI Technologies Inc. 4.1 ATI-1.68.25 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-17 21:51, hash: `cacd57b67a` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes when *Physics Properties > Fluid > Viewport Display > Grid Display > Field* is set to *Obstacle Levelset* or *Outflow Levelset* without an obstacle or outflow object in the scene. **Exact steps for others to reproduce the error** - Open the default file - Select the cube and use *Object > Quick Effects > Quick Liquid* - In *Physics Properties > Fluid > Viewport Display*, tick the checkbox for *Grid Display* and set *Field* to *Obstacle Levelset* or *Outflow Levelset*. - Blender crashes Keep in mind that there aren't obstacles or outflow objects in the scene.
Author

Added subscriber: @Oxer-1

Added subscriber: @Oxer-1
Óscar changed title from Blender crash when you select Grid Display > 'Obstacle Levelset' or 'Outflow Levelset' in Fluid Simulation to Blender 2.91 crash when you select Grid Display > 'Obstacle Levelset' or 'Outflow Levelset' in Fluid Simulation 2020-09-18 19:21:23 +02:00

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this crash. The GPUTexture pointer tex passed into swizzle_texture_channel_single() is NULL. The texture is supposed to be created by create_volume_texture() in create_field_texture(). Subsequent functions don't check if the pointer is NULL and attempt to dereference it.

GPU_texture_swizzle_set(GPUTexture * tex, const char * swizzle) Line 505	C++
swizzle_texture_channel_single(GPUTexture * tex) Line 132	C
create_field_texture(FluidDomainSettings * fds, bool single_precision) Line 321	C
DRW_smoke_ensure_coba_field(FluidModifierData * fmd) Line 483	C
workbench_volume_modifier_cache_populate(WORKBENCH_Data * vedata, Object * ob, ModifierData * md) Line 82	C
workbench_volume_cache_populate(WORKBENCH_Data * vedata, Scene * UNUSED_scene, Object * ob, ModifierData * md, eV3DShadingColorType color_type) Line 339	C
workbench_cache_populate(void * ved, Object * ob) Line 372	C
drw_engines_cache_populate(Object * ob) Line 1081	C
DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1579	C
DRW_draw_view(const bContext * C) Line 1487	C
view3d_draw_view(const bContext * C, ARegion * region) Line 1594	C
view3d_main_region_draw(const bContext * C, ARegion * region) Line 1617	C
ED_region_do_draw(bContext * C, ARegion * region) Line 535	C
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732	C
wm_draw_window(bContext * C, wmWindow * win) Line 871	C
wm_draw_update(bContext * C) Line 1072	C
WM_main(bContext * C) Line 489	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 534	C
I can confirm this crash. The `GPUTexture` pointer `tex` passed into `swizzle_texture_channel_single()` is `NULL`. The texture is supposed to be created by `create_volume_texture()` in `create_field_texture()`. Subsequent functions don't check if the pointer is `NULL` and attempt to dereference it. ``` GPU_texture_swizzle_set(GPUTexture * tex, const char * swizzle) Line 505 C++ swizzle_texture_channel_single(GPUTexture * tex) Line 132 C create_field_texture(FluidDomainSettings * fds, bool single_precision) Line 321 C DRW_smoke_ensure_coba_field(FluidModifierData * fmd) Line 483 C workbench_volume_modifier_cache_populate(WORKBENCH_Data * vedata, Object * ob, ModifierData * md) Line 82 C workbench_volume_cache_populate(WORKBENCH_Data * vedata, Scene * UNUSED_scene, Object * ob, ModifierData * md, eV3DShadingColorType color_type) Line 339 C workbench_cache_populate(void * ved, Object * ob) Line 372 C drw_engines_cache_populate(Object * ob) Line 1081 C DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1579 C DRW_draw_view(const bContext * C) Line 1487 C view3d_draw_view(const bContext * C, ARegion * region) Line 1594 C view3d_main_region_draw(const bContext * C, ARegion * region) Line 1617 C ED_region_do_draw(bContext * C, ARegion * region) Line 535 C wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732 C wm_draw_window(bContext * C, wmWindow * win) Line 871 C wm_draw_update(bContext * C) Line 1072 C WM_main(bContext * C) Line 489 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 534 C ```

This issue was referenced by 222ed9f781

This issue was referenced by 222ed9f78170116e1739a5cef65d31322d72f507
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-09-22 10:43:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80943
No description provided.