Fix T80943: return early when field to visualize is NULL